src/objects/Special_Condition__c.object
<CustomObject>
    <description>This object captures special conditions on awards.</description>
    <fields>
        <fullName>Actions_to_Remediate_Special_Condition__c</fullName>
        <description>These are the actions required to remediate the special conditions.</description>
        <inlineHelpText>Enter the actions required to remediate the special conditions.</inlineHelpText>
        <label>Actions to Remediate Special Condition</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Award_ID__c</fullName>
        <description>The Award ID of the Award the special conditions apply to.</description>
        <inlineHelpText>This is the Award ID of the Award the special conditions apply to.</inlineHelpText>
        <label>Award ID</label>
        <referenceTo>Award__c</referenceTo>
        <relationshipLabel>Special Conditions</relationshipLabel>
        <relationshipName>Special_Conditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Consequences_for_Failure_to_Remediate__c</fullName>
        <description>These are the consequences for failure to remediate a special condition.</description>
        <inlineHelpText>Enter the consequences for failure to remediate a special condition.</inlineHelpText>
        <label>Consequences for Failure to Remediate</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Deadline_for_Action__c</fullName>
        <description>Actions to remediate special conditions must be completed by the date specified.</description>
        <inlineHelpText>Actions to remediate special conditions must be completed by the date specified.</inlineHelpText>
        <label>Deadline for Action</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_of_Special_Condition__c</fullName>
        <description>The description of the special condition.</description>
        <inlineHelpText>Enter the description of the special condition.</inlineHelpText>
        <label>Description of Special Condition</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>GO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GO</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Special_Conditions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Special_Condition__c</fullName>
        <description>Other Special Conditions not already defined.</description>
        <inlineHelpText>If &quot;Other&quot; is selected as the special condition,  enter the name of the special condition.</inlineHelpText>
        <label>Other Special Condition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PO</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Special_Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is checked if the special condition is resolved.</description>
        <inlineHelpText>Check the checkbox if the special condition is resolved.</inlineHelpText>
        <label>Resolved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Condition_Justification__c</fullName>
        <description>Enter the justification for the special condition.</description>
        <inlineHelpText>Enter the justification for the special condition.</inlineHelpText>
        <label>Special Condition Justification</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Special_Condition__c</fullName>
        <description>Type of Special Condition</description>
        <inlineHelpText>Type of Special Condition</inlineHelpText>
        <label>Special Condition</label>
        <picklist>
            <picklistValues>
                <fullName>Closeout prior grant award</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submit A-133 audit or justification for not needing an A-133</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submit A-133 findings corrective action plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submit indirect cost rate agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submit program documents for approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prior approval for out of station travel required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modify performance measures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modify work plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modify budget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Special Conditions</label>
    <nameField>
        <displayFormat>Special Condition {000}</displayFormat>
        <label>Special Condition ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Special Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Actions_to_Remediate_Special_Condition</fullName>
        <active>true</active>
        <description>Actions to Remediate Special Condition field is Required for all records.</description>
        <errorConditionFormula>Actions_to_Remediate_Special_Condition__c = null</errorConditionFormula>
        <errorDisplayField>Actions_to_Remediate_Special_Condition__c</errorDisplayField>
        <errorMessage>Please enter Actions to Remediate Special Condition</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Consequences_for_Failure_to_Remediate</fullName>
        <active>true</active>
        <description>Consequences for Failure to Remediate is Required for all Records.</description>
        <errorConditionFormula>Consequences_for_Failure_to_Remediate__c = null</errorConditionFormula>
        <errorDisplayField>Consequences_for_Failure_to_Remediate__c</errorDisplayField>
        <errorMessage>Please enter Consequences for Failure to Remediate</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Description_of_Special_Condition</fullName>
        <active>true</active>
        <description>Description of Special Condition Required for all records</description>
        <errorConditionFormula>Description_of_Special_Condition__c = null</errorConditionFormula>
        <errorDisplayField>Description_of_Special_Condition__c</errorDisplayField>
        <errorMessage>Please enter Description of Special Condition</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Special_Condition</fullName>
        <active>true</active>
        <description>If &apos;Other&apos; is selected as the special condition, the Other Special Condition field must be completed.</description>
        <errorConditionFormula>IF(AND(ISPICKVAL( Special_Condition__c, &apos;Other&apos;) ,ISBLANK( Other_Special_Condition__c)),true,false)</errorConditionFormula>
        <errorMessage>An entry must be made in the &quot;Other Special Condition&quot; field if the &quot;Special Condition&quot; selected is &quot;Other.&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Special_Condition</fullName>
        <active>true</active>
        <description>Special Condition is Required for all records.</description>
        <errorConditionFormula>ISPICKVAL( Special_Condition__c , &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Special_Condition__c</errorDisplayField>
        <errorMessage>Please choose a value for Special Condition</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Special_Condition_Justification</fullName>
        <active>true</active>
        <description>Please enter Special Condition Justification</description>
        <errorConditionFormula>Special_Condition_Justification__c = null</errorConditionFormula>
        <errorDisplayField>Special_Condition_Justification__c</errorDisplayField>
        <errorMessage>Please enter Special Condition Justification</errorMessage>
    </validationRules>
</CustomObject>